# veritas-core

./: .gitignore  Cargo.toml  README.md
bindings/: Cargo.toml  README.md  package.json
bindings/core/: index.d.ts
bindings/src/: impls.rs  lib.rs  service.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: imgproc.rs  key.rs  lib.rs  main.rs
veritas-core/: Cargo.toml
veritas-core/src/: crypto.rs  key.rs  main.rs  tpm.rs
veritas-service/: Cargo.toml
veritas-service/src/: main.rs
