[package]
name = "veritas-bindings"
version = "0.1.0"
description = "JavaScript bindings to Veritas core library"
license = "ISC"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
