[package]
name = "veritas-bindings"
version = "0.1.0"
description = "JavaScript bindings to Veritas core library"
license = "ISC"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
neon = "1.1"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
zbus = { version = "5.14.0", features = ["blocking"] }
