[package]
name = "veritas-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.22.0", features = ["v4"] }
veritas-core = { version = "0.1.0", path = "../veritas-core" }
zbus = "5.14.0"
